--- a/config/top/btop/btop.conf
+++ b/config/top/btop/btop.conf
@@ -57,7 +57,7 @@ update_ms = 1000
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "memory"
+proc_sorting = "cpu direct"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -98,13 +98,13 @@ cpu_graph_upper = "total"
 
 #* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_lower = "total"
+cpu_graph_lower = "gpu-average"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
-show_gpu_info = "Auto"
+show_gpu_info = "On"
 
 #* Toggles if the lower CPU graph should be inverted.
-cpu_invert_lower = True
+cpu_invert_lower = False
 
 #* Set to True to completely disable the lower CPU graph.
 cpu_single_graph = False
