--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -13,18 +13,18 @@ set-option -g prefix M-a
 bind-key M-a send-prefix
 
 # vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
 bind -r l select-pane -R
 
 # Alt + hjkl to change pane, without prefix
-bind -n C-M-k select-pane -U 
-bind -n C-M-j select-pane -D 
-bind -n C-M-h select-pane -L 
+bind -n C-M-k select-pane -U
+bind -n C-M-j select-pane -D
+bind -n C-M-h select-pane -L
 bind -n C-M-l select-pane -R
 
-# vim-like pane resizing  
+# vim-like pane resizing
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
 bind -r C-h resize-pane -L
@@ -46,10 +46,13 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-#Keep current path when creating new windows
+# Keep current path when creating new windows
 bind c new-window -c "#{pane_current_path}"
 bind \" split-window -hc "#{pane_current_path}"
 bind % split-window -vc "#{pane_current_path}"
+
+# Add a binding to create a new session and prompt for its name
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
 
 # set color for status bar
 #set-option -g status-bg \#ff4500
