kitty: adding keybind to toggle opacity

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -669,7 +669,8 @@ background_image_linear no
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-dynamic_background_opacity no
+# dynamic_background_opacity no
+dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
@@ -1050,7 +1051,7 @@ map kitty_mod+c copy_to_clipboard
 map kitty_mod+v  paste_from_clipboard
 map kitty_mod+s  paste_from_selection
 map shift+insert paste_from_selection
-map kitty_mod+o  pass_selection_to_program
+# map kitty_mod+o  pass_selection_to_program
 
 #: You can also pass the contents of the current selection to any
 #: program using pass_selection_to_program. By default, the system's
@@ -1270,6 +1271,8 @@ map kitty_mod+a>l    set_background_opacity -0.1
 map kitty_mod+a>1    set_background_opacity 1
 map kitty_mod+a>d    set_background_opacity default
 map kitty_mod+delete clear_terminal reset active
+
+map kitty_mod+o kitten opacity_toggle.py
 
 #: You can create shortcuts to clear/reset the terminal. For example::
 
