--- a/.github/workflows/codeberg-mirror.yml
+++ b/.github/workflows/codeberg-mirror.yml
@@ -12,10 +12,15 @@ jobs:
   codeberg:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: "Checkout"
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: yesolutions/mirror-action@master
+      - name: "test"
+        run: |
+          echo "know_hosts: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}"
+      - name: "Sync repo"
+        uses: yesolutions/mirror-action@master
         with:
           REMOTE: 'ssh://git@codeberg.org/lasercata/Dotfiles.git'
           GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
