--- a/.github/workflows/codeberg-mirror.yml
+++ b/.github/workflows/codeberg-mirror.yml
@@ -16,12 +16,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: "test"
-        run: |
-          echo "know_hosts: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}"
       - name: "Sync repo"
         uses: yesolutions/mirror-action@master
         with:
           REMOTE: 'ssh://git@codeberg.org/lasercata/Dotfiles.git'
           GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
+          # GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
+          GIT_SSH_NO_VERIFY_HOST: "true"
