--- a/.github/workflows/codeberg-mirror.yml
+++ b/.github/workflows/codeberg-mirror.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           REMOTE: 'ssh://git@codeberg.org/lasercata/Dotfiles.git'
           GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          # GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
-          GIT_SSH_NO_VERIFY_HOST: "true"
+          GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
+          # GIT_SSH_NO_VERIFY_HOST: "true"
