--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -4,11 +4,11 @@
     process = git-lfs filter-process
     required = true
 [include]
-    path = ~/.git-personnal.conf
-[includeIf "gitdir:~/git/ENSSAT/"]
-    path = ~/.git-enssat.conf
+    path = ~/.git-github.conf
 [includeIf "gitdir:~/git/codeberg/"]
     path = ~/.git-codeberg.conf
+[includeIf "gitdir:~/git/ENSSAT/"]
+    path = ~/.git-enssat.conf
 [cola]
     spellcheck = false
 [color]
