--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -285,10 +285,10 @@ bindsym $mod+CTRL+Shift+o exec --no-startup-id $locker && systemctl suspend
 
 #---Auto lock the screen
 # Launch the lock screen after 10 minutes
-exec_always --no-startup-id "xautolock -detectsleep -time 1 -locker \"$locker\" -notify 30 -notifier \"notify-send -u normal -t 10000 'Locking soon' 'Locking screen in 30 seconds'\""
+exec_always --no-startup-id "xautolock -detectsleep -time 10 -locker \"$locker\" -notify 10 -notifier \"notify-send -u critical -t 9500 'Locking soon' 'Locking screen in 10 seconds'\""
 
-# Hibernate after 20 minutes
-exec_always --no-startup-id "xautolock -detectsleep -time 2 -locker \"systemctl hibernate\" -notify 60 -notifier \"notify-send -u critical -t 30000 'Hibernating soon' 'Hibernating 60 seconds'\""
+# Hibernate after 12 minutes
+exec_always --no-startup-id "xautolock -detectsleep -time 12 -locker \"systemctl hibernate\" -notify 30 -notifier \"notify-send -u critical -t 20000 'Hibernating soon' 'Hibernating 30 seconds'\""
 
 # Note: with the second xautolock, you can disable the default X11 saver that turns screen off after 10 minutes (600s).
 # Get status: `xset q`
