--- a/.github/workflows/codeberg-mirror.yml
+++ b/.github/workflows/codeberg-mirror.yml
@@ -1,5 +1,5 @@
 # Sync repo to the Codeberg mirror
-name: Mirror Sync (GitHub -> Codeberg)
+name: Mirror Sync (GitHub -> Codeberg, Forgejo)
 on:
   push:
     branches:
@@ -13,10 +13,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: "Sync repo"
+      - name: "Sync repo to Codeberg"
         uses: cynicsketch/mirror-action@master
         with:
           REMOTE: 'ssh://git@codeberg.org/lasercata/Dotfiles.git'
-          GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
+          GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY_CODEBERG }}
+          GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }} # Get it by running `ssh-keyscan codeberg.org lasercata.co`
           # GIT_SSH_NO_VERIFY_HOST: "true"
+
+      - name: "Sync repo to Forgejo"
+        uses: cynicsketch/mirror-action@master
+        with:
+          REMOTE: 'ssh://git@git.lasercata.com/lasercata/Dotfiles.git'
+          GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY_FORGEJO }}
+          GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }}
