--- a/.github/workflows/forgejo-mirror.yml
+++ b/.github/workflows/forgejo-mirror.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           REMOTE: 'ssh://git@git.lasercata.com/lasercata/Dotfiles.git'
           GIT_SSH_PRIVATE_KEY: ${{ secrets.GIT_SSH_PRIVATE_KEY_FORGEJO }}
-          GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }} # Get it by running `ssh-keyscan codeberg.org lasercata.com
+          # GIT_SSH_KNOWN_HOSTS: ${{ secrets.GIT_SSH_KNOWN_HOSTS }} # Get it by running `ssh-keyscan codeberg.org lasercata.com
           GIT_SSH_NO_VERIFY_HOST: "true"
