tmux: moving config to ~/.config

--- a/config/tmux/tmux-status.conf
+++ b/config/tmux/tmux-status.conf
@@ -1,12 +1,12 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Fri, 14 Apr 2023
+# on Mon, 22 Dec 2025
 
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
 set -g message-command-style "fg=#c3ccdc,bg=#2c3043"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=#82aaff"
+set -g pane-active-border-style "fg=#ff4500"
 set -g status-style "none,bg=#2c3043"
 set -g message-style "fg=#c3ccdc,bg=#2c3043"
 set -g pane-border-style "fg=#2c3043"
@@ -15,7 +15,7 @@ set -g status-left-length "100"
 setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#c3ccdc,bg=#2c3043"
-set -g status-left "#[fg=#092236,bg=#82aaff] #S #[fg=#82aaff,bg=#2c3043,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#2c3043,bg=#2c3043,nobold,nounderscore,noitalics]#[fg=#c3ccdc,bg=#2c3043] %Y-%m-%d  %H:%M #[fg=#82aaff,bg=#2c3043,nobold,nounderscore,noitalics]#[fg=#092236,bg=#82aaff] #h "
+set -g status-left "#[fg=#092236,bg=#ff4500] #S #[fg=#ff4500,bg=#2c3043,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#2c3043,bg=#2c3043,nobold,nounderscore,noitalics]#[fg=#c3ccdc,bg=#2c3043] %Y-%m-%d  %H:%M #[fg=#ff4500,bg=#2c3043,nobold,nounderscore,noitalics]#[fg=#092236,bg=#ff4500] #h "
 setw -g window-status-format "#[fg=#c3ccdc,bg=#2c3043] #I #[fg=#c3ccdc,bg=#2c3043] #W "
 setw -g window-status-current-format "#[fg=#2c3043,bg=#2c3043,nobold,nounderscore,noitalics]#[fg=#c3ccdc,bg=#2c3043] #I #[fg=#c3ccdc,bg=#2c3043] #W #[fg=#2c3043,bg=#2c3043,nobold,nounderscore,noitalics]"
