--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -69,11 +69,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @sidebar-tree-command 'tree -C' #Colorize the tree
 
 # Tmux line
-source ~/.tmux-status.conf
+# source ~/.tmux-status.conf
+source ~/.config/tmux/tmux-status.conf
 
 # #---Border color
 # set -g pane-border-style "fg=#812200"
 # set -g pane-active-border-style "fg=#ff4500"
 
 #-Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
