i3: small correction in desktop file

--- a/config/i3wm/desktop_files/i3.desktop
+++ b/config/i3wm/desktop_files/i3.desktop
@@ -3,7 +3,7 @@ Name=i3
 Comment=improved dynamic tiling window manager
 Exec=i3
 TryExec=i3
-Type=Application
+Type=XSession
 X-LightDM-DesktopName=i3
 DesktopNames=i3
 Keywords=tiling;wm;windowmanager;window;manager;
