--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -2,9 +2,9 @@
 
 #--------------------------------
 #
-# Last modification : 2025.12.13
+# Last modification : 2026.01.01
 # Author            : Lasercata
-# Version           : v1.9.19
+# Version           : v1.9.20
 #
 #--------------------------------
 
@@ -288,7 +288,7 @@ bindsym $mod+CTRL+Shift+o exec --no-startup-id $locker && systemctl suspend
 
 #---Auto lock the screen
 # Launch the lock screen after 10 minutes
-exec_always --no-startup-id "xautolock -detectsleep -time 10 -locker \"$locker\" -notify 30 -notifier \"notify-send -u critical -t 29500 'Locking soon' 'Locking screen in 30 seconds'\""
+exec_always --no-startup-id "xautolock -detectsleep -time 10 -locker \"$locker\" -notify 30 -notifier \"notify-send -u critical -t 29500 'Locking soon' 'Locking screen in 30 seconds' & play /usr/share/sounds/Oxygen-Sys-App-Message.ogg\""
 
 # Hibernate after 12 minutes
 exec_always --no-startup-id "xautolock -detectsleep -time 12 -locker \"systemctl hibernate\" -notify 30 -notifier \"notify-send -u critical -t 20000 'Hibernating soon' 'Hibernating 30 seconds'\""
