git: new gpg key + public email

--- a/config/git/.git-codeberg.conf
+++ b/config/git/.git-codeberg.conf
@@ -1,6 +1,6 @@
 [user]
     name = lasercata
-    email = lasercata@noreply.codeberg.org
-    signingkey = 18BDA246BFEB6C57AEC6B982919C5995EBEA4A9E
+    email = contact@lasercata.com
+    signingkey = 097F4B7A2D9CADD7B9AF8D64EC95781E0F6DA0EA
 
 
