--- a/config/git/.git-github.conf
+++ b/config/git/.git-github.conf
@@ -1,5 +1,5 @@
 [user]
     name = lasercata
-    email = 67599917+lasercata@users.noreply.github.com
-    signingkey = 18BDA246BFEB6C57AEC6B982919C5995EBEA4A9E
+    email = contact@lasercata.com
+    signingkey = 097F4B7A2D9CADD7B9AF8D64EC95781E0F6DA0EA
 
