polybar: adding swap module

--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -95,7 +95,8 @@ label-mounted-foreground = ${colors.fg-3}
 [module/cpu]
 type = internal/cpu
 interval = 1
-format-prefix = " "
+; format-prefix = " "
+format-prefix = " "
 format-prefix-underline = ${colors.cyan-2}
 format-prefix-foreground = ${colors.cyan-2}
 format-background = ${colors.bg-1}
@@ -110,16 +111,17 @@ type = internal/memory
 interval = 1
 
 ; format-prefix = " "
-format-prefix = " "
-format-prefix-underline = ${colors.cyan-1}
+; format-prefix = " "
+format-prefix = " "
+format-prefix-underline = ${colors.ff4500}
 format-prefix-background = ${colors.bg-1}
-format-prefix-foreground = ${colors.cyan-1}
+format-prefix-foreground = ${colors.ff4500}
 
 format-background = ${colors.bg-1}
 
 label = %percentage_used:2%%
 ; label = %free%
-label-underline = ${colors.cyan-1}
+label-underline = ${colors.ff4500}
 label-foreground = ${colors.fg-3}
 
 ;---Warn
@@ -128,10 +130,45 @@ label-warn = %percentage_used:2%% (%free% free)
 format-warn = <label-warn>
 
 label-warn-background = ${colors.alert}
+label-warn-underline = ${colors.ff4500}
+label-warn-foreground = ${colors.fg-3}
+
+; format-warn-prefix = " "
+format-warn-prefix = " "
+format-warn-prefix-underline = ${colors.ff4500}
+format-warn-prefix-background = ${colors.alert}
+format-warn-prefix-foreground = ${colors.ff4500}
+
+
+[module/swap]
+type = internal/memory
+interval = 1
+
+; format-prefix = " "
+format-prefix = " "
+; format-prefix = " "
+format-prefix-underline = ${colors.cyan-1}
+format-prefix-background = ${colors.bg-1}
+format-prefix-foreground = ${colors.cyan-1}
+
+format-background = ${colors.bg-1}
+
+label = %percentage_swap_used:2%%
+; label = %free%
+label-underline = ${colors.cyan-1}
+label-foreground = ${colors.fg-3}
+
+;---Warn
+warn-percentage = 80
+label-warn = %percentage_swap_used:2%%
+format-warn = <label-warn>
+
+label-warn-background = ${colors.alert}
 label-warn-underline = ${colors.cyan-1}
 label-warn-foreground = ${colors.fg-3}
 
 format-warn-prefix = " "
+; format-warn-prefix = " "
 format-warn-prefix-underline = ${colors.cyan-1}
 format-warn-prefix-background = ${colors.alert}
 format-warn-prefix-foreground = ${colors.cyan-1}
