--- a/config/polybar/config
+++ b/config/polybar/config
@@ -66,7 +66,7 @@ font-0 = Hack Nerd Font:size=10
 font-1 = Hack Nerd Font:size=12
 
 modules-left = i3 slash space playerctl
-modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
+modules-center = memory space slash space swap space slash space filesystem space slash space cpu space slash space system-fan-speed
 modules-right = alsa space slash space network space slash eth-tethering slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
 tray-position = right
@@ -113,7 +113,7 @@ font-0 = Hack Nerd Font:size=10
 font-1 = Hack Nerd Font:size=12
 
 modules-left = i3 slash space playerctl-short
-modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
+modules-center = memory space slash space swap space slash space filesystem space slash space cpu space slash space system-fan-speed
 modules-right = alsa space slash space network-short space slash eth-tethering slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
 ; tray-position = right
