--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -158,20 +158,21 @@ label = %percentage_swap_used:2%%
 label-underline = ${colors.cyan-1}
 label-foreground = ${colors.fg-3}
 
-;---Warn
-warn-percentage = 80
-label-warn = %percentage_swap_used:2%%
-format-warn = <label-warn>
-
-label-warn-background = ${colors.alert}
-label-warn-underline = ${colors.cyan-1}
-label-warn-foreground = ${colors.fg-3}
-
-format-warn-prefix = " "
-; format-warn-prefix = " "
-format-warn-prefix-underline = ${colors.cyan-1}
-format-warn-prefix-background = ${colors.alert}
-format-warn-prefix-foreground = ${colors.cyan-1}
+; The `warn-percentage` is linked to the ram usage percentage, not to the swap.
+; ;---Warn
+; warn-percentage = 80
+; label-warn = %percentage_swap_used:2%%
+; format-warn = <label-warn>
+;
+; label-warn-background = ${colors.alert}
+; label-warn-underline = ${colors.cyan-1}
+; label-warn-foreground = ${colors.fg-3}
+;
+; format-warn-prefix = " "
+; ; format-warn-prefix = " "
+; format-warn-prefix-underline = ${colors.cyan-1}
+; format-warn-prefix-background = ${colors.alert}
+; format-warn-prefix-foreground = ${colors.cyan-1}
  
 
 [module/temperature]
