--- a/config/polybar/modules/misc.ini
+++ b/config/polybar/modules/misc.ini
@@ -9,7 +9,7 @@ format-foreground = ${colors.bg-3}
 type = custom/text
 format = |
 format-background = ${colors.bg-1}
-format-foreground = ${colors.fg-3}
+format-foreground = ${colors.bg-3}
 ; content-font = 3
 
 
