--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -50,33 +50,6 @@ type = internal/xwindow
 label = %title:0:30:...%
 
 
-; [module/filesystem]
-; type = internal/fs
-; interval = 25
-;
-; mount-0 = /
-;
-; label-mounted =  %percentage_used%%
-; label-unmounted = %mountpoint% not mounted
-; label-unmounted-foreground = ${colors.foreground-alt}
-;
-;
-; [module/cpu]
-; type = internal/cpu
-; interval = 2
-; ;format-prefix = " "
-; format-prefix-foreground = ${colors.foreground-alt}
-; label =  %percentage:2%%
-;
-;
-; [module/memory]
-; type = internal/memory
-; interval = 2
-; ;format-prefix = " "
-; format-prefix-foreground = ${colors.foreground-alt}
-; ;format-underline = #4bffdc
-; label =  %percentage_used%%
-
 [module/filesystem]
 type = internal/fs
 interval = 25
@@ -96,14 +69,31 @@ label-mounted-foreground = ${colors.fg-3}
 type = internal/cpu
 interval = 1
 ; format-prefix = " "
-format-prefix = " "
-format-prefix-underline = ${colors.cyan-2}
-format-prefix-foreground = ${colors.cyan-2}
+; format-prefix = " "
+format-prefix = " "
+format-prefix-underline = ${colors.ff4500}
+format-prefix-foreground = ${colors.ff4500}
 format-background = ${colors.bg-1}
 format = <label> 
 label = %percentage%%
-label-underline = ${colors.cyan-2}
+label-underline = ${colors.ff4500}
 label-foreground = ${colors.fg-3}
+
+;---Warn
+warn-percentage = 90
+label-warn = %percentage%%
+format-warn = <label-warn>
+
+label-warn-background = ${colors.alert}
+label-warn-underline = ${colors.ff4500}
+label-warn-foreground = ${colors.fg-3}
+
+; format-warn-prefix = " "
+; format-warn-prefix = " "
+format-warn-prefix = " "
+format-warn-prefix-underline = ${colors.ff4500}
+format-warn-prefix-background = ${colors.alert}
+format-warn-prefix-foreground = ${colors.cyan-1}
 
 
 [module/memory]
@@ -158,48 +148,33 @@ label = %percentage_swap_used:2%%
 label-underline = ${colors.cyan-1}
 label-foreground = ${colors.fg-3}
 
-; The `warn-percentage` is linked to the ram usage percentage, not to the swap.
-; ;---Warn
-; warn-percentage = 80
-; label-warn = %percentage_swap_used:2%%
-; format-warn = <label-warn>
-;
-; label-warn-background = ${colors.alert}
-; label-warn-underline = ${colors.cyan-1}
-; label-warn-foreground = ${colors.fg-3}
-;
-; format-warn-prefix = " "
-; ; format-warn-prefix = " "
-; format-warn-prefix-underline = ${colors.cyan-1}
-; format-warn-prefix-background = ${colors.alert}
-; format-warn-prefix-foreground = ${colors.cyan-1}
- 
 
 [module/temperature]
 type = internal/temperature
 interval = 1
-thermal-zone = 1
+; thermal-zone = 0
+zone-type = x86_pkg_temp
 warn-temperature = 65
 units = true
 
 format = <label>
 format-prefix = " "
-format-prefix-underline = ${colors.blue-1}
+format-prefix-underline = ${colors.cyan-1}
 format-prefix-background = ${colors.bg-1}
-format-prefix-foreground = ${colors.blue-3}
+format-prefix-foreground = ${colors.cyan-1}
 
 format-warn = <label-warn>
 format-warn-prefix = " "
-format-warn-prefix-underline = ${colors.yellow-3}
+format-warn-prefix-underline = ${colors.ff4500}
 format-warn-prefix-background = ${colors.bg-1}
-format-warn-prefix-foreground = ${colors.yellow-3}
+format-warn-prefix-foreground = ${colors.yellow-1}
 
 label = %temperature-c%
-label-underline = ${colors.blue-1}
+label-underline = ${colors.cyan-1}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-3}
 
 label-warn = %temperature-c%
-label-warn-underline = ${colors.yellow-3}
+label-warn-underline = ${colors.ff4500}
 label-warn-background = ${colors.bg-1}
 label-warn-foreground = ${colors.fg-3}
